PepLink 8.4.0 blocked the config.time API
So, define the timezone in settings

--- a/example-config.ini
+++ b/example-config.ini
@@ -9,6 +9,7 @@ password = root
 url = https://router.lan/
 client_id = 012345_replace_with_id
 client_secret = 012345_replace_with_secret
+time_zone = ETC/UTC
 
 [monitor]
 interval = 10
